syntax = "proto3";

option csharp_namespace = "ConfigurationDemo.ServerSide";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc UploadPicture(UploadPictureRequest) returns (UploadPictureReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message UploadPictureRequest {
	uint32 id = 1;
	bytes picture = 2;
	string content_type = 3;
}

message UploadPictureReply {
	uint32 id = 1;
	bytes picture = 2;
	string content_type = 3;
}
